removed old section